--- a/app/src/main/res/layout/data_card.xml
+++ b/app/src/main/res/layout/data_card.xml
@@ -50,7 +50,7 @@
         android:layout_marginLeft="165dp"
         android:layout_marginTop="170dp"
         android:paddingLeft="10dp"
-        android:text="dummy"
+        android:text=""
         android:textColor="@color/blue"
         android:textSize="25sp" />
 </android.support.v7.widget.CardView>
