--- a/app/src/main/res/layout/data_card.xml
+++ b/app/src/main/res/layout/data_card.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    card_view:cardCornerRadius="30dp"
-    card_view:cardElevation="30dp"
+    card_view:cardCornerRadius="1dp"
+    card_view:cardElevation="5dp"
     android:layout_width="match_parent"
     android:layout_height="240dp"
     android:layout_gravity="bottom"
-    android:background="@color/white">
-
+    card_view:cardBackgroundColor="@android:color/transparent">
 <!--    card_view:cardCornerRadius="10dp">-->
 
 
@@ -29,7 +28,7 @@
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:text=""
-        android:textColor="@color/blue"
+        android:textColor="@color/white"
         android:textSize="25sp" />
 
     <TextView
@@ -51,6 +50,6 @@
         android:layout_marginTop="170dp"
         android:paddingLeft="10dp"
         android:text=""
-        android:textColor="@color/blue"
+        android:textColor="@color/white"
         android:textSize="25sp" />
 </android.support.v7.widget.CardView>
